Blender crashes/closes down application at alembic export of any object #49369

Closed
opened 2016-09-15 21:34:14 +02:00 by Daniel Bystedt · 15 comments
Member

System Information
Operating system and graphics card
windows 7, nvidia GeForce GTX 660

Blender Version
Broken: 2.78 21e9db9
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Open blender
  2. select default cube
  3. Press menu item file/export/alembic with default alembic export settings (or any for that matter)
  4. Blender shuts down/crashes. No frozen screen or anything.
**System Information** Operating system and graphics card windows 7, nvidia GeForce GTX 660 **Blender Version** Broken: 2.78 21e9db9 Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. Open blender 2. select default cube 3. Press menu item file/export/alembic with default alembic export settings (or any for that matter) 4. Blender shuts down/crashes. No frozen screen or anything.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @DanielBystedt

Added subscriber: @DanielBystedt

This issue was referenced by 04bfea0d67

This issue was referenced by 04bfea0d6747b48cf8e792586cd6df8df0f00dcc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

Thanks for the report, should be fixed now!

Thanks for the report, should be fixed now!

Added subscriber: @vllee

Added subscriber: @vllee

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
vhalerie reopened this issue 2018-02-16 04:03:51 +01:00

Hi! I am still encountering this issue on Windows 10. I am using 2.79

Hi! I am still encountering this issue on Windows 10. I am using 2.79

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2018-02-16 13:28:37 +01:00

Please create a new bug report, with attached .blend and exact steps to redo the problem. Basic Alembic export is working for a lot of people in 2.79, so there is likely something specific about how you export or your system configuration.

This particular bug was fixed, the crash you found most likely has a different cause and so should be handled separately.

Please create a new bug report, with attached .blend and exact steps to redo the problem. Basic Alembic export is working for a lot of people in 2.79, so there is likely something specific about how you export or your system configuration. This particular bug was fixed, the crash you found most likely has a different cause and so should be handled separately.

Added subscriber: @MuratZ

Added subscriber: @MuratZ

Same problem with 2.80 and 2.79 also.
Impossible to export alembic.
It shuts down when the advance bar is about %10 - %28.

Same problem with 2.80 and 2.79 also. Impossible to export alembic. It shuts down when the advance bar is about %10 - %28.

@MuratZ, please open a new bug report (with a problematic blend file) as your issue is unlikely to be this very same issue.

@MuratZ, please open a new bug report (with a problematic blend file) as your issue is unlikely to be this very same issue.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49369
No description provided.