source/blender/editors/io/io_alembic.c
@@ -123,8 +123,8 @@ static int wm_alembic_export_exec(bContext *C, wmOperator *op)
 	    .compression_type = RNA_enum_get(op->ptr, "compression_type"),
 	    .packuv = RNA_boolean_get(op->ptr, "packuv"),
 		.triangulate = RNA_boolean_get(op->ptr, "triangulate"),
-		.quad_method = RNA_boolean_get(op->ptr, "quad_method"),
-		.ngon_method = RNA_boolean_get(op->ptr, "ngon_method"),
+		.quad_method = RNA_enum_get(op->ptr, "quad_method"),
+		.ngon_method = RNA_enum_get(op->ptr, "ngon_method"),
 
 	    .global_scale = RNA_float_get(op->ptr, "global_scale"),
 	};
